--- a/styles.css
+++ b/styles.css
@@ -362,6 +362,18 @@
   max-width: 1200px;
   min-width: 1100px;
   margin-top: 40px;
+  overflow: hidden;
+}
+.news_Container {
+  padding: 0px 35px;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  min-width: 1100px;
+  height: 950px;
+  margin-top: 40px;
+  overflow: hidden;
 }
 .scale__line-white {
   text-decoration: none;
@@ -401,11 +413,10 @@
 
 .row {
   display: flex;
-  margin-top: 30px;
-  margin-left: 20px;
   flex-direction: row;
-  flex-wrap: wrap;
+  margin-left: 20px;
 }
+
 .row__block {
   min-width: 200px;
   max-width: 340px;
@@ -561,7 +572,6 @@
 .calendar__title {
   color: #0070b8;
 }
-
 .calendar__text {
   width: 90%;
   font-size: 12px;
@@ -622,8 +632,6 @@
   }
   .calen__block {
     display: flex;
-    flex-direction: row;
-    overflow: hidden;
   }
   .calen__img {
     width: 970px;
@@ -669,6 +677,11 @@
   min-width: 300px;
   max-width: 340px;
 }
+@media (max-width: 600px) {
+  .gallery {
+    display: none;
+  }
+}
 
 /* footer */
 
@@ -700,7 +713,8 @@
   }
 }
 .col-li {
-  margin-top: 15px;
+  margin-top: 5px;
+  cursor: pointer;
 }
 li {
   list-style-type: none;
@@ -737,6 +751,17 @@ li {
   flex-direction: row;
   align-items: center;
   margin-left: 20px;
+}
+.footer__text-block {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.footer__text-block a {
+  font-size: 15px;
+}
+.footer__arrow {
+  cursor: pointer;
 }
 .under-footer__none {
   text-decoration: none;
